--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
+    "sharp": "^0.34.3",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.14",
     "zustand": "^5.0.7"
