soft delete products for admin fix

--- a/.env.production
+++ b/.env.production
@@ -10,11 +10,12 @@ NEXT_PUBLIC_APP_URL=https://luthando-fragrances.vercel.app
 NEXT_PUBLIC_BUSINESS_NAME=Luthando Fragrances
 NEXT_PUBLIC_WHATSAPP_NUMBER=27123456789
 
-# PayFast Configuration
-NEXT_PUBLIC_PAYFAST_MERCHANT_ID=10000100
-NEXT_PUBLIC_PAYFAST_MERCHANT_KEY=46f0cd694581a
-PAYFAST_PASSPHRASE=jt7NOE43FZPn
-NEXT_PUBLIC_PAYFAST_SANDBOX=true
+# PRODUCTION CREDENTIALS (UPDATE THESE AFTER CHANGING YOUR CREDENTIALS)
+NEXT_PUBLIC_PAYFAST_MERCHANT_ID=31286465
+NEXT_PUBLIC_PAYFAST_MERCHANT_KEY=xrldb1t1n9tdn
+PAYFAST_PASSPHRASE=payment-1TSHOLO
+NEXT_PUBLIC_PAYFAST_SANDBOX=false
+s
 
 # Email Configuration (Optional)
 SENDGRID_API_KEY=your_sendgrid_api_key
