--- a/.env.production
+++ b/.env.production
@@ -4,18 +4,17 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzd
 
 
 # Application URL (Update this with your custom domain)
-NEXT_PUBLIC_APP_URL=https://luthando-fragrances.vercel.app
+NEXT_PUBLIC_APP_URL=https://luthandofragrances.co.za/
 
 # Business Configuration
 NEXT_PUBLIC_BUSINESS_NAME=Luthando Fragrances
-NEXT_PUBLIC_WHATSAPP_NUMBER=27123456789
+NEXT_PUBLIC_WHATSAPP_NUMBER=2712345678
 
 # PRODUCTION CREDENTIALS (UPDATE THESE AFTER CHANGING YOUR CREDENTIALS)
 NEXT_PUBLIC_PAYFAST_MERCHANT_ID=31286465
 NEXT_PUBLIC_PAYFAST_MERCHANT_KEY=xrldb1t1n9tdn
 PAYFAST_PASSPHRASE=payment-1TSHOLO
 NEXT_PUBLIC_PAYFAST_SANDBOX=false
-s
 
 # Email Configuration (Optional)
 SENDGRID_API_KEY=your_sendgrid_api_key
