feat: complete Firebase migration (auth, database, storage)
- Replace Supabase with Firebase Authentication
- Migrate database to Firestore with sample products
- Implement Firebase Storage for product images
- Deploy Firestore and Storage security rules
- Update middleware for Firebase JWT verification
- Remove Supabase dependencies and legacy code
- Add Firebase admin SDK configuration
- Update all admin pages for Firebase compatibility

--- a/firebase.json
+++ b/firebase.json
@@ -7,7 +7,7 @@
   },
   "storage": {
     "rules": "storage.rules",
-    "bucket": "luthando-frangrances.appspot.com"
+    "bucket": "luthando-frangrances.firebasestorage.app"
   },
   "functions": [
     {
